--- a/capital.html
+++ b/capital.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Phoenix</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
     </nav>
     <div id="container">
       <header class="title">
-        <img class="img" src="images/phx.png" alt="" />
+        <img class="img" src="images/phx.png" alt="Phoenix title" />
       </header>
     </div>
 
@@ -25,7 +25,7 @@
       <section class="main-sum">
         <div class="image-container">
           <div class="image-box">
-            <img class="img" src="images/phxOne.png" alt="" />
+            <img class="img" src="images/phxOne.png" alt="city of Phoenix" />
             <div class="text-box">
               <ul>
                 <li>Phoenix is the fifth-largest city in the United States.</li>
@@ -36,7 +36,7 @@
           </div>
 
           <div class="image-box">
-            <img class="img" src="images/phxTwo.png" alt="" />
+            <img class="img" src="images/phxTwo.png" alt="city of Phoenix" />
             <div class="text-box">
               <ul>
                 <li>
@@ -52,7 +52,7 @@
           </div>
 
           <div class="image-box">
-            <img class="img" src="images/phxThree.png" alt="" />
+            <img class="img" src="images/phxThree.png" alt="city of Phoenix" />
             <div class="text-box">
               <ul>
                 <li>Phoenix is the capital of Arizona, and the hottest state</li>
@@ -70,15 +70,15 @@
 
     <div class="content">
 
-        <div class="main-sum">
+        <div class="main-sum" style="position: absolute;">
             <h3>Phoenix, Arizona</h3>
-            <ul>
+            <ol>
               <li>Population: Approximately 1.7 million (as of 2020)</li>
               <li>Year Incorporated: 1881</li>
               <li>Region: Central Arizona</li>
               <li>Classification: Urban</li>
               <li>Average Income Level: Higher than the state average</li>
-            </ul>
+            </ol>
         </div>
       </div>
   </body>
