--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -20,32 +20,80 @@
         <img
           class="img"
           src="images/Screenshot 2024-06-09 at 8.19.25 PM.png"
-          alt=""
+          alt="Arizona title"
         />
       </header>
 
       <img
         class="img"
         src="images/Screenshot 2024-06-09 at 8.19.48 PM.png"
-        alt=""
+        alt="Arizona flag"
       />
     </header>
 
     <div class="content">
-
-      <div class="main-sum">
-        <h1 style="font-size: 24px; font-weight: normal; color: #333; line-height: 1.5; margin: 0;">
+      <section class="main-sum">
+        <h1
+          style="
+            font-size: 24px;
+            font-weight: normal;
+            color: #333;
+            line-height: 1.5;
+            margin: 0;
+          "
+        >
           Welcome to Arizona
         </h1>
-      
+
         <div>
-          <h3 style="font-size: 24px; font-weight: normal; color: #333; line-height: 1.5; margin: 0;">
+          <h3
+            style="
+              font-size: 24px;
+              font-weight: normal;
+              color: #333;
+              line-height: 1.5;
+              margin: 0;
+            "
+          >
             A southwestern U.S. state, is best known for the Grand Canyon, the
             mile-deep chasm carved by the Colorado River. Flagstaff, a ponderosa
             pine–covered mountain town, is a major gateway to the Grand Canyon.
           </h3>
         </div>
-      </div>
+        <h1>Arizona's Growth Rate</h1>
+        <div class="table-container">
+          <div style="
+          display: contents;">
+            <table>
+              <tr>
+                <th>Year</th>
+                <th>Population</th>
+                <th>Growth Rate</th>
+              </tr>
+              <tr>
+                <td>2010</td>
+                <td>6,392,017</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>2015</td>
+                <td>6,758,251</td>
+                <td>5.73%</td>
+              </tr>
+              <tr>
+                <td>2020</td>
+                <td>7,278,717</td>
+                <td>7.70%</td>
+              </tr>
+              <tr>
+                <td>2023</td>
+                <td>7,500,000</td>
+                <td>3.04%</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
