--- a/sedona.html
+++ b/sedona.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sedona</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
     </nav>
     <div id="container">
       <header class="title">
-        <img class="img" src="images/sedona.png" alt="" />
+        <img class="img" src="images/sedona.png" alt="Sedona title" />
       </header>
     </div>
 
@@ -25,7 +25,7 @@
       <section class="main-sum">
         <div class="image-container">
           <div class="image-box">
-            <img class="img" src="images/sedonaOne.png" alt="" />
+            <img class="img" src="images/sedonaOne.png" alt="city of Sedona" />
             <div class="text-box">
                 <ul>
                     <li>Sedona is renowned for its stunning red rock formations and desert like landscape</li>
@@ -36,7 +36,7 @@
           </div>
 
           <div class="image-box">
-            <img class="img" src="images/sedonaTwo.png" alt="" />
+            <img class="img" src="images/sedonaTwo.png" alt="city of Sedona" />
             <div class="text-box">
                 <ul>
                     <li>Sedona hosts several art galleries and cultural events.</li>
@@ -47,7 +47,7 @@
           </div>
 
           <div class="image-box">
-            <img class="img" src="images/sedonaThree.png" alt="" />
+            <img class="img" src="images/sedonaThree.png" alt="city of Sedona" />
             <div class="text-box">
                 <ul>
                     <li>Sedona’s Chapel of the Holy Cross offers breathtaking views.</li>
@@ -62,15 +62,15 @@
 
     <div class="content">
 
-        <div class="main-sum">
+        <div class="main-sum" style="position: absolute;">
             <h3>Sedona, Arizona</h3>
-            <ul>
+            <ol>
               <li>Population: Approximately 10,000 (as of 2020)</li>
               <li>Year Incorporated: 1988</li>
               <li>Region: Northern Arizona</li>
               <li>Classification: Rural/Suburban</li>
               <li>Average Income Level: Higher than the state average</li>
-            </ul>
+            </ol>
         </div>
       </div>
     
