--- a/flagstaff.html
+++ b/flagstaff.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flagstaff</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
     </nav>
     <div id="container">
       <header class="title">
-        <img class="img" src="images/flagstaff.png" alt="" />
+        <img class="img" src="images/flagstaff.png" alt="Flagstaff title" />
       </header>
     </div>
 
@@ -25,7 +25,7 @@
       <section class="main-sum">
         <div class="image-container">
           <div class="image-box">
-            <img class="img" src="images/flaggstaffOne.png" alt="" />
+            <img class="img" src="images/flaggstaffOne.png" alt="city of Flagstaff" />
             <div class="text-box">
               <ul>
                 <li>
@@ -42,7 +42,7 @@
           </div>
 
           <div class="image-box">
-            <img class="img" src="images/flagstaffTwo.png" alt="" />
+            <img class="img" src="images/flagstaffTwo.png" alt="city of Flagstaff" />
             <div class="text-box">
               <ul>
                 <li>Sedona hosts several art galleries and cultural events.</li>
@@ -55,7 +55,7 @@
           </div>
 
           <div class="image-box">
-            <img class="img" src="images/flagstaffThree.png" alt="" />
+            <img class="img" src="images/flagstaffThree.png" alt="city of Flagstaff" />
             <div class="text-box">
               <ul>
                 <li>
@@ -75,15 +75,15 @@
       </section>
     </div>
     <div class="content">
-      <div class="main-sum">
+      <div class="main-sum" style="position: absolute;">
         <h3>Flagstaff, Arizona</h3>
-        <ul>
+        <ol>
           <li>Population: Approximately 75,000 (as of 2020)</li>
           <li>Year Incorporated: 1928</li>
           <li>Region: Northern Arizona</li>
           <li>Classification: Urban</li>
           <li>Average Income Level: Similar to the state average</li>
-        </ul>
+        </ol>
       </div>
     </div>
   </body>
