--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
       <a href="flagstaff.html" class="nav-link">Flagstaff</a>
       <a href="form.html" class="nav-link">Contact</a>
     </nav>
-    <div class="form-container">
+    <section class="form-container">
       <h2>Contact Us</h2>
       <form id="contactForm">
         <div class="form-group">
@@ -73,11 +73,11 @@
           ></textarea>
         </div>
 
-        <div class="form-group">
+        <div style="float: right;">
           <input type="submit" value="Submit" />
         </div>
       </form>
-    </div>
+    </section>
 
     <script>
       const form = document.getElementById('contactForm');
